--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -148,6 +148,15 @@
     }
 }
 
+@keyframes rotate180 {
+    0% {
+        transform: rotateX(0deg);
+    }
+    100% {
+        transform: rotateX(180deg);
+    }
+}
+
 @layer utilities {
     .animate-spin-slow {
         animation: spin360 30s linear infinite;
